--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,11 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body>
+  <!-- Load main application content here -->
+  <!-- created by chowdeswar 24-12-2019 -->
   <app-root></app-root>
 </body>
 </html>
